# RingParser

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
backend/: app.py  config.py
backend/api/: routes.py
backend/models/: file_data_model.py  mapping_model.py  pipeline_model.py  schema_model.py  validation_model.py  xml_model.py
backend/services/: base_parser.py  csv_parser.py  euring_parser.py  mapping_engine.py  parser_registry.py  submit_parser.py  validator.py  xlsx_parser.py  xml_generator.py  xsd_parser.py
backend/utils/: encoding.py  file_handler.py  ring_number.py  type_inference.py  unit_conversion.py
data/format/: griel_bulkupload.xml
docs/: ARCHITECTURE_CLASSES_DETAIL.md  ARCHITECTURE_OVERVIEW.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js  column-mapper.js  file-upload.js  schema-viewer.js  xml-generator.js
